editar inmueble ya no se pisa y  abm usuario con imagen

--- a/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
@@ -3,12 +3,11 @@
 @{
     ViewData["Title"] = "Delete";
 }
-<h1>Eliminar </h1>
-
-<h4>Seguro que quiere eliminarlo?</h4>
-<div>
-    <h4>Contrato</h4>
-    <hr />
+<div class="card bg-light border border-primary">
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary mt-2">Eliminar Inmueble</h4>
+        </div>
+        <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
@@ -57,10 +56,12 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+   <form asp-action="Delete">
         <div class="form-group">
             <input type="submit" value="Eliminar" class="btn btn-danger" />
             <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
         </div>
     </form>
-</div>
+
+    </div>
+ </div>
