--- a/Inmobiliaria_2022/Views/Contratos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Index.cshtml
@@ -4,11 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Contrato</h1>
-
-<p>
-    <a asp-action="Create">Crear nuevo</a>
-</p>
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light text-center">
+        <h3>Contrato</h3>
+    </div>
+    <div class="card-header border-bottom border-primary bg-light">
+        <a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title text-primary">Lista</h5>
 <table class="table">
     <thead>
         <tr>
@@ -35,7 +39,7 @@
                 Inquilino
 @*                @Html.DisplayNameFor(model => model.InquilinoId)
 *@            </th>
-            <th></th>
+            <th>Propietario</th>
         </tr>
     </thead>
     <tbody>
@@ -64,6 +68,10 @@
                 @Html.DisplayFor(modelItem => item.inquilino.Nombre)
             </td>
             <td>
+                  @Html.DisplayFor(modelItem => item.inmueble.Propietario.Nombre)
+                  @Html.DisplayFor(modelItem => item.inmueble.Propietario.Apellido) 
+            </td>
+            <td>
                 @Html.ActionLink("Editar", "Edit", new {  id=item.Id  }) |
                 @Html.ActionLink("Detalles", "Details", new {  id=item.Id  }) |
                 @Html.ActionLink("Eliminar", "Delete", new {  id=item.Id  }) |
@@ -73,3 +81,5 @@
 }
     </tbody>
 </table>
+</div>
+</div>
