--- a/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Index.cshtml
@@ -3,18 +3,26 @@
 @{
     ViewData["Title"] = "Inmuebles";
 }
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light text-center">
+        <h3>Inmueble</h3>
+    </div>
+    <div class="card-header border-bottom border-primary bg-light">
+        <a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a>
+    </div>
+    <div class="card-body">
+<h5 class="card-title text-primary">Listar</h5>
 
-<h1>Inmuebles</h1>
+        <div class="input-group-prepend mb-2">
+            <a class="btn btn-info" asp-action="Index" asp-route-id="1">Todos</a>
+            <a class="btn btn-info" asp-action="Index" asp-route-id="2">Disponible</a>
+            <a class="btn btn-info" asp-action="Index" asp-route-id="3">No Disponible</a>
+        </div>
 
-<p>
-    <a asp-action="Create">Crear nuevo</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>*@
+        <table class="table table-hover table-bordered w-100" id="dtHorizontalVertical">
+            
+        <thead class="table-info">
+                <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Direccion)
             </th>
@@ -52,9 +60,7 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>*@
+          
             <td>
                 @Html.DisplayFor(modelItem => item.Direccion)
             </td>
@@ -83,13 +89,29 @@
             <td>
 					@(item.Propietario.Nombre + " " + item.Propietario.Apellido)
 			</td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id=item.Id}) |
-                @Html.ActionLink("Eliminar", "Delete", new {id=item.Id })
-               	
+
+            <td style="display:none;">
+             @Html.DisplayFor(modelItem => item.Propietario.Dni)
             </td>
+         <td class="d-flex justify-content-center">
+            <di class="btn-group" role="group">
+
+                <a asp-action="Edit" asp-route-id="@item.Id" asp-ro class="btn btn-warning"><i class="fas fa-edit">Editar</i></a>
+                <a asp-action="Details" asp-route-id="@item.Id" asp-ro class="btn btn-info"><i class="fas fa-edit">Detalle</i></a>
+                <a asp-action="Delete" asp-route-id="@item.Id" asp-ro class="btn btn-primary"><i class="fas fa-edit">Eliminar</i></a>
+
+                @if (item.EstaPublicado == false)
+                {
+                    <a asp-action="Activar" asp-route-id="@item.Id" class="btn btn-success"><i class="fas fa-minus-square"></i>Habilitar</a>                    
+                }
+                else
+                {
+                    <a asp-action="Delete" asp-route-id="@item.Id" class=" btn btn-danger"><i class="fas fa-minus-square"></i>Deshabilitar</a>                                  
+                }
+                           
         </tr>
 }
     </tbody>
-</table>
+  </table>
+ </div>
+</div>
