--- a/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "Listapagos";
 
 }
-
-<h1>Listapagos</h1>
-
-
-<p>   
-    <a asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear nuevo</a> @*exit*@
-</p>
-    
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light text-center"><h3>Lista de pagos</h3></div>
+    <div class="card-header border-bottom border-primary bg-light">
+       <a asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear</a> @*exit*@
+    </div>
+    <div class="card-body">
+        <h5 class="card-title text-primary">Lista</h5>
+@*<h1>Listapagos</h1><p> <a asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear nuevo</a> exit</p>*@   
 <table class="table">
     <thead>
         <tr>
@@ -41,7 +41,9 @@
             </td>
         </tr>
         }
-        <a asp-controller="Contratos" asp-action="Index">Volver</a> @*exitjho*@
 
     </tbody>
-</table>
+  </table>
+ </div>
+</div>
+ <a asp-controller="Contratos" asp-action="Index">Volver</a> @*exitjho*@
