--- a/Inmobiliaria_2022/Views/Usuarios/Login.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Login.cshtml
@@ -7,7 +7,7 @@
 <div class="card shadow">
     <div class="card-body col-md-4 align-self-center bg-light border border-primary">
         <div class="card-header border-bottom border-primary bg-light">
-            <h5 class="card-title text-primary mt-2">Iniciando Sesión</h5>
+            <h5 class="card-title text-primary mt-2">Iniciar Sesión</h5>
         </div>
         <div class="card-body">
             <form asp-action="Login">
