--- a/Inmobiliaria_2022/wwwroot/css/site.css
+++ b/Inmobiliaria_2022/wwwroot/css/site.css
@@ -11,11 +11,11 @@ html {
 }
 
 .border-top {
-    border-top: 1px solid #0062cc;
+    border-top: 1px solid #ff006e;
 }
 
 .border-bottom {
-    border-bottom: 1px solid #0062cc;
+    border-bottom: 1px solid #ff006e;
 }
 
 .box-shadow {
