--- a/Inmobiliaria_2022/Views/Inmuebles/Activar.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Activar.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Inmobiliaria_2022.Models.Inmueble
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Cancelar";
 }
 <div class="card bg-light border border-primary">
     <div class="card-header border-bottom border-primary bg-light">
-        <h4 class="card-title text-primary mt-2">Inmueble</h4>
+        <h4 class="card-title text-primary mt-2">Cancelar</h4>
     </div>
     <div class="card-body">
-      <dl class="row">
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
@@ -31,14 +31,14 @@
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoNombre)
+            @Html.DisplayFor(model => model.Tipo)
         </dd>
-        @*<dt class = "col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TipoNombre)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TipoNombre)
-        </dd>*@
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Costo)
         </dt>
@@ -76,20 +76,20 @@
             @Html.DisplayFor(model => model.EstaHabilitado)
         </dd>
         <dt class = "col-sm-2">
-@*            @Html.DisplayNameFor(model => model.PropietarioId)
-*@            Propietario
+            @Html.DisplayNameFor(model => model.PropietarioId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Propietario.Nombre)@Html.DisplayFor(model => model.Propietario.Apellido)
+            @Html.DisplayFor(model => model.PropietarioId)
         </dd>
-        </dl>
-    </div>
-
-    <form asp-action="Details">
+    </dl>
+     <form asp-action="Activar">
         <div class="form-group">
-            <input type="submit" value="Detalle" class="btn btn-danger" />
-            <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
+            <input type="submit" value="Eliminar" class="btn btn-danger" />
+            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
         </div>
-    </form>
-   @*<div>@Html.ActionLink("Edit", "Edit", new {  id = Model.Id  }) |<a asp-action="Index">Volver al Listado</a></div>*@
+    </form>    @*<form asp-action="Activar">
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>*@
+ </div>
 </div>
