--- a/Inmobiliaria_2022/Views/Inmuebles/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Create.cshtml
@@ -1,22 +1,21 @@
 ﻿@model Inmobiliaria_2022.Models.Inmueble
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
-<h1>Crear </h1>
+<div class="card bg-light border border-primary">
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary">Crear Inmueble</h4>
+        </div>
+        <div class="card-body">
 
-<h4>Inmueble</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>*@
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input asp-for="Id" class="form-control" type="hidden" value="0"/>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Direccion" class="control-label"></label>
                 <input asp-for="Direccion" class="form-control" />
@@ -33,7 +32,7 @@
 
                  @foreach (var tip in (IDictionary<int, string>)ViewBag.TipoNombre)
                  {
-                    <option value="@tip.Key ">@tip.Value</option>
+                     @:<option value="@tip.Key ">@tip.Value</option>
                  }
                 </select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
