--- a/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Editar";
 }
 
-<h1>Editar</h1>
-
-<h4>Inmueble</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card bg-light border border-primary">
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary mt-2">Editar Inmueble</h4>
+        </div>
+        <div class="card-body">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -27,11 +26,18 @@
                 <input asp-for="Ambientes" class="form-control" />
                 <span asp-validation-for="Ambientes" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
-                <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="TipoNombre" class="form-control" />
+                <label class="control-label">Tipo</label>
+                <select class="form-control" name="Tipo">
+                    @foreach (var kvp in (IDictionary<int, string>)ViewBag.TipoNombre)
+                    {
+                        @:<option @(kvp.Key == Model.Tipo ? "selected" : "") value="@kvp.Key">@kvp.Value</option>
+                    }
+                </select>
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
+
             @*<div class="form-group">
                 <label asp-for="TipoNombre" class="control-label"></label>
                 <input asp-for="TipoNombre" class="form-control" />
@@ -39,22 +45,22 @@
             </div>*@
             <div class="form-group">
                 <label asp-for="Costo" class="control-label"></label>
-                <input asp-for="Costo" class="form-control" />
+                <input asp-for="Costo" class="form-control" type="number"/>
                 <span asp-validation-for="Costo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Superficie" class="control-label"></label>
-                <input asp-for="Superficie" class="form-control" />
+                <input asp-for="Superficie" class="form-control" type="number"/>
                 <span asp-validation-for="Superficie" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Latitud" class="control-label"></label>
-                <input asp-for="Latitud" class="form-control" />
+                <input asp-for="Latitud" class="form-control" type="number"/>
                 <span asp-validation-for="Latitud" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Longitud" class="control-label"></label>
-                <input asp-for="Longitud" class="form-control" />
+                <input asp-for="Longitud" class="form-control" type="number" />
                 <span asp-validation-for="Longitud" class="text-danger"></span>
             </div>
            @* <div class="form-group">
@@ -66,7 +72,7 @@
                 <label asp-for="EstaHabilitado" class="control-label"></label>
                 <input asp-for="EstaHabilitado" class="form-control" />
                 <span asp-validation-for="EstaHabilitado" class="text-danger"></span>
-            </div>*@
+                </div>*@
             <div class="form-group">
                 <label class="control-label">Propietario</label>
                 <select class="form-control" name="PropietarioId">
@@ -88,6 +94,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
 
 
