--- a/Inmobiliaria_2022/Views/Inquilinos/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Delete.cshtml
@@ -1,15 +1,13 @@
 ﻿@model Inmobiliaria_2022.Models.Inquilino
 
 @{
-    ViewData["Title"] = "Eliminar";
+    ViewData["Title"] = "Delete";
 }
-
-<h1>Eliminar</h1>
-
-<h4>¿Seguro que desea eliminar el inquilino?</h4>
-<div>
-    <h4>Inquilino</h4>
-    <hr />
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light">
+        <h4 class="card-title text-primary mt-2">Eliminar Inquilino</h4>
+    </div>
+    <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
@@ -55,4 +53,5 @@
             <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
         </div>
     </form>
+    </div>
 </div>
