--- a/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Index.cshtml
@@ -3,12 +3,15 @@
 @{
     ViewData["Title"] = "Inquilinos";
 }
-
-<h1>Inquilinos</h1>
-
-<p>
-    <a asp-action="Create">Crear nuevo</a>
-</p>
+<div class="card bg-light border border-primary">
+    <div class="card-header border-bottom border-primary bg-light text-center">
+        <h3>Inquilino</h3>
+    </div>
+    <div class="card-header border-bottom border-primary bg-light">
+        <a class="btn btn-success text-white mr-2" asp-action="Create">Crear</a>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title text-primary">Lista</h5>
 <table class="table">
     <thead>
         <tr>
@@ -65,4 +68,6 @@
         </tr>
 }
     </tbody>
-</table>
+  </table>
+ </div>
+</div>
