--- a/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
@@ -4,19 +4,17 @@
     ViewData["Title"] = "Crear";
 }
 
-<h1>Crear</h1>
+<div class="card bg-light border border-primary">
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary">Crear Propietario</h4>
+        </div>
+        <div class="card-body">
 
-<h4>Propietario</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" type="hidden"/>
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>*@
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <input asp-for="Id" class="form-control" type="hidden" />
+                </div>
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -50,7 +48,6 @@
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
                 <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
-
             </div>
         </form>
     </div>
