--- a/Inmobiliaria_2022/Views/Propietarios/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Editar Propietario";
 }
 
-<h1>Editar</h1>
-
-<h4>Propietario</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card bg-light border border-primary">
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary mt-2">Editar Propietario</h4>
+        </div>
+        <div class="card-body">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" name="Id" value="@Model.Id" />
