--- a/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar </h1>
+<div class="card bg-light border border-primary">
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary mt-2">Eliminar Usuario</h4>
+        </div>
+        <div class="card-body">
 
-<h4>Seguro que desea eliminar el usuario ?</h4>
-<div>
-    <h4>Usuario</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
