--- a/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
@@ -4,14 +4,20 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
-
-<h4>Usuario</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+ <div class="card bg-light border border-primary">
+        <div class="card-header border-bottom border-primary bg-light">
+            <h4 class="card-title text-primary mt-2">Editar Usuario</h4>
+        </div>
+        <div class="card-body">
         <form asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+        @*a avatar*@
+        <div class="form-group">
+			
+			@if (Model.Avatar != "") {<img src="@Model.Avatar" class="rounded-circle" alt="Perfil" width="100" height="100">}
+			else {<p>Sin avatar</p>}
+		</div>
         <div class="form-group">
             <label asp-for="Id" class="control-label"></label>
             <input asp-for="Id" class="form-control" />
@@ -32,12 +38,10 @@
             <input asp-for="Email" class="form-control" readonly />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="Clave" class="control-label"></label>
-            <input asp-for="Clave" class="form-control" />
-            <span asp-validation-for="Clave" class="text-danger"></span>
-        </div>
-        @if (User.IsInRole("Administrador") || User.IsInRole("SuperAdministrador"))
+        
+        
+
+        @if (User.IsInRole("Administrador"))
         {
             <div class="form-group">
                 <label class="control-label">Rol</label>
