--- a/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
@@ -19,9 +19,9 @@
 			else {<p>Sin avatar</p>}
 		</div>
         <div class="form-group">
-            <label asp-for="Id" class="control-label"></label>
-            <input asp-for="Id" class="form-control" />
-            <span asp-validation-for="Id" class="text-danger" type="hidden"></span>
+           
+            <input asp-for="Id" class="form-control" type="hidden"/>
+            <span asp-validation-for="Id" class="text-danger" ></span>
         </div>
         <div class="form-group">
             <label asp-for="Nombre" class="control-label"></label>
