--- a/Inmobiliaria_2022/Views/Usuarios/Perfil.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Perfil.cshtml
@@ -60,7 +60,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver al listado</a>
 </div>
 
 @section Scripts {
