--- a/Inmobiliaria_2022/Views/Inmuebles/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="card bg-light border border-primary">
         <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary mt-2">Eliminar Inmueble</h4>
+            <h4 class="card-title text-primary mt-2">Deshabilitar Inmueble</h4>
         </div>
         <div class="card-body">
     <dl class="row">
@@ -76,8 +76,8 @@
     
      <form asp-action="Delete">
         <div class="form-group">
-            <input type="submit" value="Eliminar" class="btn btn-danger" />
-            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+            <input type="submit" value="Deshabilitar" class="btn btn-danger" />
+            <a class="btn btn-secondary" asp-action="Index">Volver al Lista</a>
         </div>
     </form>
 
