--- a/Inmobiliaria_2022/Views/Propietarios/VerInmueble.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/VerInmueble.cshtml
@@ -8,11 +8,9 @@
     <div class="card-header border-bottom border-primary bg-light text-center">
         <h3>Propietario</h3>
     </div>
-    <div class="card-header border-bottom border-primary bg-light">
-        <a class="btn btn-success text-white mr-2" asp-action="Create">Inmuebles Por Propietarios</a>
-    </div>
+    
     <div class="card-body">
-        <h5 class="card-title text-primary">Lista</h5>
+        <h5 class="card-title text-primary">Inmuebles Por Propietarios</h5>
 <table class="table">
     <thead>
         <tr>
